Fixed header image color bleed

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ header h1 {
 header img {
     border-radius: 170px;
     width: 300px;
-    border: 20px solid rgb(255, 255, 255)
+    border: 20px solid rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
 }
 
 main {
